packages/styles/src/filter/filter-popover.scss
[data-sl-filter-value] {
  margin-left: calc(-1 * var(--sl-space-1));
}

[data-sl-filter-popover] {
  --sl-filter-popover-width: 16.25rem;

  width: var(--sl-filter-popover-width);
  max-height: 27.5rem;
  padding: var(--sl-space-0);
}

[data-sl-filter-list] {
  padding: var(--sl-space-4) var(--sl-space-6);
}

[data-sl-filter-popover-combobox] {
  & > [data-sl-search] {
    min-width: unset;
  }
}

[data-sl-filter-popover-footer] {
  gap: var(--sl-space-2);
  border-top: var(--sl-border);
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

[data-sl-filter-item] {
  padding: var(--sl-space-2) var(--sl-space-0);
  color: var(--sl-fg-base);
  font: var(--sl-text-body-font);
  letter-spacing: var(--sl-text-body-letter-spacing);

  &:hover {
    background: var(--sl-bg-plain);
  }

  &[data-active-item][data-focus-visible] {
    & [data-sl-filter-item-check] {
      box-shadow: var(--sl-focus-ring);
    }
    & [data-sl-filter-item-check]:has([data-sl-filter-item-check-indicator]) {
      box-shadow: var(--sl-focus-ring-accent);
    }
  }

  &:active,
  &[data-active-item] {
    background: var(--sl-bg-plain);
  }
}

